--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@raphiniert/ra-data-postgrest": "^2.4.1",
     "cryptr": "^6.3.0",
     "jwt-decode": "^4.0.0",
     "next": "15.0.1",
     "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-admin": "^5.3.2",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
