secure postgrest using keycloak

--- a/.sample.env
+++ b/.sample.env
@@ -7,3 +7,6 @@ KEYCLOAK_SECRET="iYNkcbbFmbesJTECVd6kU1FQ5UOUARO5"
 KEYCLOAK_ISSUER="http://localhost:8080/realms/<realm_name>"
 KEYCLOAK_REFRESH_URL="http://localhost:8080/realms/<realm_name>/protocol/openid-connect/token"
 KEYCLOAK_LOGOUT_URL="http://localhost:8080/realms/<realm_name>/protocol/openid-connect/logout"
+
+# Postgrest
+POSTGREST_API_URL="http://localhost:3005"
