--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PGRST_DB_SCHEMA: public
       PGRST_DB_ANON_ROLE: anon
       PGRST_SERVER_PROXY_URI: "http://127.0.0.1:3005"
-      PGRST_JWT_SECRET: '{"kty":"RSA","e":"AQAB","kid":"8a2ab8b1-4767-4354-ba3e-bad602379bd2","n":"u8J_Fkgrj-SCjZ41D2UattJa0RPUSxeOyMikMeKK1akt6s8brjNvBEWvDbz8hNtJPBHRvpZhOlY4WZPU8O_1XdCjB7wznhJG-34Vm4N-hmNKb1QduKM9TB5w4irdR_hzz0E4IgsYNCw-YcKdm96gZXEYhMxcbJVUWI_fvNP3FmoSNMIIKFgOuD4y4sRvCukeFttmXGLB2uJHA8xhdusxnDC7-HEUtiihWFVf-TI1sLWJibPAAbmYsmg05k-Ca5v1GSgQGMnGXxfYTtyT4_jYEcVoZGqKmygEQhdrZZYrQ8DGFtT5twfhAtI9w71bABc7G0Mmjb9OpXsFO8OQHKUAOw"}'
+      PGRST_JWT_SECRET: "<your_keys>"
       PGRST_JWT_ROLE_CLAIM_KEY: ".resource_access.nextjs.roles[0]"
     depends_on:
       - postgres
@@ -17,7 +17,8 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_DB: keycloak
       POSTGRES_USER: app_user
       POSTGRES_PASSWORD: secret
       PGDATA: /var/lib/postgresql/data
@@ -28,8 +29,15 @@ services:
     ports:
       - "8080:8080"
     environment:
+      KC_DB: postgres
+      KC_DB_USERNAME: app_user
+      KC_DB_PASSWORD: secret
+      KC_HOSTNAME: localhost
+      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_BOOTSTRAP_ADMIN_PASSWORD: adminpassword
+    depends_on:
+      - postgres
     command: start-dev
 volumes:
   db-data:
