Run keycloak in prod profile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,11 +33,16 @@ services:
       KC_DB_USERNAME: app_user
       KC_DB_PASSWORD: secret
       KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 8080
+      KC_HOSTNAME_STRICT_HTTPS: false
+      KC_HOSTNAME_STRICT_BACKCHANNEL: false
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_BOOTSTRAP_ADMIN_PASSWORD: adminpassword
+      KC_HTTP_ENABLED: true
+      KEYCLOAK_SSL_REQUIRED: none
     depends_on:
       - postgres
-    command: start-dev
+    command: start
 volumes:
   db-data:
