Add feature to download file from minio

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,20 @@ services:
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_BOOTSTRAP_ADMIN_PASSWORD: adminpassword
-      KC_HTTP_ENABLED: true
+      KC_HTTP_ENABLED: "true"
       KEYCLOAK_SSL_REQUIRED: none
     depends_on:
       - postgres
     command: start
+  minio:
+    image: quay.io/minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000" # MinIO API
+      - "9001:9001" # MinIO Console
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: adminpassword
+    command: server /data --console-address ":9001"
 volumes:
   db-data:
