--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@raphiniert/ra-data-postgrest": "^2.4.1",
+    "axios": "^1.7.9",
     "cryptr": "^6.3.0",
     "jwt-decode": "^4.0.0",
     "next": "15.0.1",
