Added ai chat support

--- a/.sample.env
+++ b/.sample.env
@@ -10,3 +10,7 @@ KEYCLOAK_LOGOUT_URL="http://localhost:8080/realms/<realm_name>/protocol/openid-c
 
 # Postgrest
 POSTGREST_API_URL="http://localhost:3005"
+
+# Backend
+BACKEND_URL="http://localhost:8000"
+NEXT_PUBLIC_BACKEND_URL="http://localhost:8000"
