--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-admin": "^5.3.2",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
